trunk/Archive2/c8/e824ca2d4769c4/output
main.cpp: In function 'int main()':
main.cpp:6:15: error: cannot resolve overloaded function 'f' based on conversion to type 'bool'
     bool b = &f<4>;
               ^
main.cpp:6:10: warning: unused variable 'b' [-Wunused-variable]
     bool b = &f<4>;
          ^
